--- a/IT Courses mockup/styles/concrete-course.css
+++ b/IT Courses mockup/styles/concrete-course.css
@@ -19,6 +19,10 @@
     width: 100% !important;
 }
 
+.concrete-course-info {
+    margin-top: 4.5em;
+}
+
 .concrete-course-info .course-params {
     font-size: 16pt;
     text-align: center;
@@ -45,5 +49,36 @@
 
     .course-title {
         font-size: 28pt;
+    }
+}
+
+@media (min-width: 1800px) {
+    
+    h2 {
+        font-size: 36pt !important;
+    }
+    
+    ul {
+        font-size: 28pt !important;
+    }
+
+    h3 {
+        font-size: 32pt;
+    }
+
+    .course-params {
+        font-size: 28pt !important;
+    }
+
+    .concrete-course-info {
+        margin-top: 6em;
+    }
+    
+    .join-button button{
+        font-size: 24pt;
+    }
+
+    .course-image {
+        max-height: 550px !important;
     }
 }
