--- a/PhoneBook/PhoneBook/Views/Shared/Error.cshtml
+++ b/PhoneBook/PhoneBook/Views/Shared/Error.cshtml
@@ -12,6 +12,4 @@
     </p>
 }
 
-<p>
-    В ходе работы приложения возникла ошибка. Попробуйте перезайти в свой профиль. Если это не поможет, свяжитесь с администратором.
-</p>
+<p>@Model.Message</p>
