--- a/PhoneBook/PhoneBook/Views/User/Login.cshtml
+++ b/PhoneBook/PhoneBook/Views/User/Login.cshtml
@@ -3,7 +3,7 @@
 
 <div class="container">
     <h2 class="text-center mb-3">Авторизация</h2>
-    <form asp-controller="User" asp-action="Login">
+    <form asp-controller="User" asp-action="Login" asp-route-returnUrl="@ViewBag.ReturnUrl">
         <div class="validation row text-center justify-content-center" asp-validation-summary="All"></div>
 
         <div class="row text-center justify-content-center mb-2 mt-2">
