--- a/PhoneBook/PhoneBook/Views/PhoneStorage/AccessDenied.cshtml
+++ b/PhoneBook/PhoneBook/Views/PhoneStorage/AccessDenied.cshtml
@@ -3,4 +3,4 @@
 }
 
 <h2>Кажется, у вас недостаточно прав для просмотра этой страницы</h2>
-<a asp-controller="Home" asp-action="Index">Вернутся на главную страницу</a>
+<a asp-controller="PhoneStorage" asp-action="Index">Вернутся на главную страницу</a>
