--- a/PhoneBook/PhoneBook/Views/Shared/_Layout.cshtml
+++ b/PhoneBook/PhoneBook/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PhoneBook</a>
+                <a class="navbar-brand" asp-area="" asp-controller="PhoneStorage" asp-action="Index">PhoneBook</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Добавить запись</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="PhoneStorage" asp-action="Create">Добавить запись</a>
                             </li>
                             <li class="nav-item ml-auto">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Logout">Выйти</a>
