--- a/PhoneBook/PhoneBook/Views/PhoneStorage/Index.cshtml
+++ b/PhoneBook/PhoneBook/Views/PhoneStorage/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Телефонный справочник";
 }
 @using PhoneBook.ViewModels;
-@model PagingListViewModel<BasePhoneViewModel>
+@model EntityPage<BookEntry>
 
 <div class="phone-list row justify-content-center">
 
